# lily-engine

./: .gitignore  LICENSE  Makefile  README.md  index.html  meson.build  web.ini
include/lily/: assert.h  assets.h  config.h  engine.h  math.h  memory.h  scene.h  timer.h  types.h  zip.h
include/lily/2d/: rendering.h
include/lily/anim/: easing.h  tween.h  tween_def.h
include/lily/reader/: ini.h
resources/: lily.ini
resources/assets/: assets.ini
scripts/: package_asset.sh
src/: meson.build
src/game/: main.c  meson.build
src/lily/: assets.c  assets.h  config.c  config.h  engine.c  engine.h  meson.build  scene_manager.c  scene_manager.h  timer.c  zip.c
src/lily/2d/: rendering.c
src/lily/anim/: easing.c  tween.c  tween_def.c
src/lily/ini/: engine_config.c  engine_config.h
src/lily/reader/: ini.c
subprojects/: inih.wrap  miniz.wrap  raylib.wrap
